tests/type-errors/same_id_variable_parameter.arl
archetype same_id_variable_parameter(n : nat)

variable n : nat = 0
